--- a/projectsPage/projectStyles.css
+++ b/projectsPage/projectStyles.css
@@ -11,6 +11,9 @@
     background-color: #E8D2AE; 
     display: flex;
     flex-flow: column; 
+    align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 
@@ -48,17 +51,18 @@
     flex-flow: row; 
     flex-wrap: wrap; 
     justify-content: space-evenly;
-    width: 80vw; 
+    align-content: space-between;
+    width: 60vw; 
     height: 85vh; 
     padding: 3rem;
 }
 
 .projectCard{
+    margin-top: 2rem;
     background-color: #D7B29D; 
-    background: url('projectPictures/weGrowBG.png');
     background-size: contain;
-    width: 10rem;
-    height: 12rem;
+    width: 13rem;
+    height: 15rem;
     border-radius: 3px; 
     display: flex;
     flex-flow: column; 
@@ -111,8 +115,8 @@
     display: flex;
     flex-flow: column; 
     align-items: center;
-    flex-wrap: wrap; 
-    justify-content: flex-start;
+    flex-wrap: nowrap; 
+    justify-content: space-evenly;
     padding: 2rem;
     line-height: 3.5rem;
 }
@@ -122,6 +126,7 @@
     color: #688e52;
     text-align: center;
     font-size: 2.5rem;
+    justify-self: start;
 }
 
 .projectInfoText{
@@ -155,4 +160,16 @@
 
 .gitHubLink:active{
     color: #688e52;
+}
+
+.demoVideo{
+    width: 50%;
+    height: 40%; 
+}
+
+/* Adjustments for smaller screen*/
+@media (max-width: 750px){
+    .projectCardContainer{
+        width: 90vw; 
+    }
 }
