--- a/projectsPage/projectStyles.css
+++ b/projectsPage/projectStyles.css
@@ -52,7 +52,7 @@
     flex-wrap: wrap; 
     justify-content: space-evenly;
     align-content: space-between;
-    width: 60vw; 
+    width: 69vw; 
     height: 85vh; 
     padding: 3rem;
 }
@@ -116,9 +116,10 @@
     flex-flow: column; 
     align-items: center;
     flex-wrap: nowrap; 
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 2rem;
     line-height: 3.5rem;
+    overflow-y: auto; 
 }
 
 .nameHeader{
@@ -163,13 +164,58 @@
 }
 
 .demoVideo{
-    width: 50%;
-    height: 40%; 
+    width: 40%;
+    height: 60%; 
+    align-self: center;
+    margin-left: 2rem;
+}
+
+/* Adjustments for larger screen*/
+@media (min-width: 1300px){
+    .demoVideo{
+        width: 60%;
+        height: 55%; 
+    }
 }
 
 /* Adjustments for smaller screen*/
 @media (max-width: 750px){
     .projectCardContainer{
         width: 90vw; 
+        align-content: space-between;
+    }
+
+    .projectInfoPanel{
+        line-height: 5vh;
+    }
+
+
+    .nameHeader{
+        font-family: 'Fjalla One', sans-serif; 
+        color: #688e52;
+        text-align: center;
+        font-size: 8vw;
+        justify-self: start;
+    }
+
+    .demoVideo{
+        margin-left: 3vw;
+    }
+    
+}
+
+@media (max-width: 400px){
+
+    .projectInfoText{
+        font-family: 'Raleway', sans-serif; 
+        font-weight: 400; 
+        color: #3C3D3D;
+        font-size: 5vw;
+    }
+    
+    .projectInfoSectionHead{
+        font-family: 'Raleway', sans-serif; 
+        font-weight: 700; 
+        font-size: 6vw;
     }
 }
