Flattened any references to file folders for use on hosting service.

--- a/aboutPage/aboutStyles.css
+++ b/aboutPage/aboutStyles.css
@@ -46,7 +46,7 @@ main{
 /* Portrait*/ 
 
 .portrait{
-    background: url('../resources/portraitWithBG.png');
+    background: url('portraitWithBG.png');
     background-size: contain;
     background-attachment: scroll;
     background-repeat: no-repeat;
