--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -61,6 +61,11 @@ main{
     align-self: center;
 }
 
+.col-container{
+    display: flex;
+    flex-flow: column; 
+}
+
 /* Info */ 
 .infoContainer{
     background-color: rgba(215, 178, 157, .5);
@@ -72,6 +77,8 @@ main{
     padding: 2rem;
     overflow-y: auto;
     line-height: 4vh;
+    display: flex;
+    flex-flow: column; 
 }
 
 .infoPanel{
@@ -82,6 +89,15 @@ main{
     padding: 5vw;
     height: 100%;
 
+}
+
+#resumeLink{
+    font-family: 'Raleway', sans-serif; 
+    font-weight: bold; 
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: #eb681c;
+    align-self: flex-end;
 }
 
 
