--- a/css/mainPagestyles.css
+++ b/css/mainPagestyles.css
@@ -265,7 +265,7 @@ nav li a:active, .mobileNavModal li a:active{
 
 /* Time of day adjustments */ 
 .nightBG{
-    background: url("homepageNightBG.png"); 
+    background: url("assets/homepageNightBG.png"); 
     background-size: cover; 
 }
 
@@ -327,7 +327,7 @@ nav li a:active, .mobileNavModal li a:active{
     }
 
     .nightBG{
-        background: url("HomepageNightBGMobile.png");
+        background: url("assets/HomepageNightBGMobile.png");
         background-size: contain;
     }
 }
