--- a/css/aboutStyles.css
+++ b/css/aboutStyles.css
@@ -51,7 +51,7 @@ main{
 /* Portrait*/ 
 
 .portrait{
-    background: url('assets/portraitWithBG.png');
+    background: url('../assets/portraitWithBG.png');
     background-size: contain;
     background-attachment: scroll;
     background-repeat: no-repeat;
